--- a/css/login.css
+++ b/css/login.css
@@ -61,6 +61,8 @@ img#my-signin2{
     position: fixed;
     top: 90px;
     left: 10px;
+    margin-top: 77px;
+    margin-left: 50px;
 }
 .bottom-image {
     position: fixed;
